--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ mvnw.cmd
 ###properties###
 /unimall-launcher/src/main/resources/application-dev.properties
 /unimall-launcher/src/main/resources/application-prd.properties
+/unimall-launcher/src/main/resources/application.properties
 
 ### target ###
 /target/
