--- a/unimall-app-api/pom.xml
+++ b/unimall-app-api/pom.xml
@@ -93,6 +93,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.gavaghan/geodesy -->
+		<dependency>
+			<groupId>org.gavaghan</groupId>
+			<artifactId>geodesy</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+
+
     </dependencies>
 
 </project>
