--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ mvnw.cmd
 /unimall-launcher/src/main/resources/application.properties
 /unimall-launcher/src/main/resources/application.properties.bak
 /unimall-launcher/src/main/resources/application.yml
+application.properties.bak
+application.yml
 
 ### target ###
 /target/
