--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ unimall.log.*.tmp
 /unimall-launcher/src/main/resources/application.yml
 /unimall-launcher/src/main/resources/application.properties.bak
 /unimall-app/unpackage/dist/dev
+/unimall-launcher/src/main/docker/unimall*
